# ForgeGuard

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  USER_INSTRUCTIONS.md  _check_build.py  _check_mini.py  _dbg.py  _migrate.py  alembic.ini  boot.ps1  boot.py  clean_directives.py  docker-compose.yml  forge.json  forge_constitution.py  forge_mcp_server.py  forgeguard_lock.ps1  migrate_vscode_to_z.ps1  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  tmpclaude-54f2-cwd
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  test.yml
Forge/: MCP_BUILDER_PLAN.md
Forge/Contracts/: Desktop_Distribution_Plan.md  Remediation.md  auditor_prompt.md  blueprint.md  boundaries.json  builder_contract.md  builder_directive.md  manifesto.md  phases.md  physics.yaml  recovery_planner_prompt.md  schema.md  stack.md  system_prompt.md  ui.md
Forge/IDE/: README.md
Forge/Plans/: builder_agent_plan.md
Forge/evidence/: audit_ledger.md  diff_log.md  diff_pool_pipeline.txt  (+5 more)
app/: auth.py  config.py  errors.py  main.py  webhooks.py  ws_manager.py
auditor/: PLAN.md  __init__.py  audit_schema.py  auditor_agent.py  context_loader.py  run_auditor.py  tools.py
builder/: builder_agent.py  context_loader.py  phases.md  run_builder.py  tools.py
forge_ide/: __init__.py  adapters.py  agent.py  backoff.py  build_helpers.py  context_pack.py  contracts.py  diagnostics.py  diff_generator.py  errors.py  file_index.py  git_ops.py  invariants.py  journal.py  log_parser.py  patcher.py  reader.py  redactor.py  registry.py  relevance.py  response_parser.py  runner.py  sanitiser.py  searcher.py  test_scope.py  workspace.py
planner/: context_loader.py  plan_schema.py  planner_agent.py  run_planner.py  tools.py
tests/: conftest.py  test_access_log.py  test_agent.py  test_agent_client.py  test_architecture_baseline.py  test_architecture_mapper.py  test_audit_engine.py  test_audit_runner.py  test_audit_service.py  test_auth.py  test_auth_router.py  test_auto_fix.py  test_build_clarification.py  test_build_cycle.py  test_build_cycle_service.py  test_build_errors.py  test_build_integration.py  test_build_repo.py  test_build_service.py  test_builder_agent.py  test_builder_agent_stub.py  test_builder_reliability.py  test_builds_router.py  test_certificate_aggregator.py  test_certificate_renderer.py  test_certificate_scorer.py  test_coherence_fixes.py  test_config.py  test_consistency_scorer.py  test_contract_gitlock.py  test_contract_snapshots.py  test_contract_utils.py  test_cost_gate.py  test_dependency_map.py  test_dossier_lock.py  test_exception_handler.py  test_forge_mcp.py  test_forge_tools_in_builder.py  test_git_client.py  test_git_push_fix.py  (+59 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+229 files in other folders)
