[project]
name = "forgeguard"
version = "0.1.0"
requires-python = ">=3.12"

# ── Ruff ─────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF012", # mutable class variable (pydantic models)
    "UP007",  # use X | Y for union types (breaks older runtime)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "forge_ide"]

# ── Mypy ─────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
# Incremental adoption — don't block on third-party stubs
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
